--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -34,7 +34,7 @@
         <androidx.constraintlayout.motion.widget.MotionLayout
             android:id="@+id/m_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:padding="10dp"
             app:layoutDescription="@xml/fragment_layout_scene"
             app:layout_constraintBottom_toBottomOf="parent"
